get_image() 获取上传图片的URL
